--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 /.idea
 /vendor
 /node_modules
-composer.phar
-phpunit.xml
-.phpunit.result.cache
-.DS_Store
-Thumbs.db
+composer.lock
+package-lock.json
