--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "watch": "mix watch",
+        "production": "mix --production",
+        "nova:install": "npm --prefix='../../vendor/laravel/nova' ci"
     },
     "devDependencies": {
-        "cross-env": "^7.0.2",
-        "laravel-mix": "^5.0.4",
-        "laravel-nova": "^1.2.2",
-        "vue": "^2.6.11",
-        "vue-template-compiler": "^2.6.11"
+        "@vue/compiler-sfc": "^3.3.4",
+        "laravel-mix": "^6.0.49",
+        "mix-tailwindcss": "^1.3.0",
+        "postcss": "^8.4.31",
+        "sass": "^1.69.4",
+        "sass-loader": "^13.3.2",
+        "tailwindcss": "^3.3.3",
+        "vue-loader": "^17.2.2"
     }
 }
